[gd_scene load_steps=15 format=3 uid="uid://63e08mmcfoec"]

[ext_resource type="Script" path="res://Characters/Turret.gd" id="1_dnkqr"]
[ext_resource type="Texture2D" uid="uid://dqjsrtdona4l7" path="res://Characters/turret_BASE.png" id="1_q05g6"]
[ext_resource type="PackedScene" uid="uid://b6uyhnyk37jp6" path="res://Characters/Bullet.tscn" id="2_en1wq"]
[ext_resource type="Texture2D" uid="uid://jv4m44ux43b6" path="res://Characters/turret_FACE.png" id="2_p2bqn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_getr5"]
atlas = ExtResource("2_p2bqn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k60q4"]
atlas = ExtResource("2_p2bqn")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cp07s"]
atlas = ExtResource("2_p2bqn")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q363q"]
atlas = ExtResource("2_p2bqn")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dawg6"]
atlas = ExtResource("2_p2bqn")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd0m6"]
atlas = ExtResource("2_p2bqn")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cj8l"]
atlas = ExtResource("2_p2bqn")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ty35"]
atlas = ExtResource("2_p2bqn")
region = Rect2(0, 288, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_3jcsf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_getr5")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k60q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cp07s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q363q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dawg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd0m6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cj8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ty35")
}],
"loop": true,
"name": &"shoot",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_inrs2"]
size = Vector2(22, 22)

[node name="Turret" type="StaticBody2D"]
collision_mask = 0
script = ExtResource("1_dnkqr")
bullet = ExtResource("2_en1wq")

[node name="Pointer" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Pointer"]
target_position = Vector2(800, 0)
collision_mask = 3
collide_with_areas = true

[node name="GunSprite" type="AnimatedSprite2D" parent="."]
modulate = Color(0.8, 0.8, 0.8, 1)
sprite_frames = SubResource("SpriteFrames_3jcsf")
animation = &"shoot"

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, -1)
shape = SubResource("RectangleShape2D_inrs2")

[node name="BaseSprite" type="Sprite2D" parent="CollisionShape2D"]
visible = false
z_index = -1
texture = ExtResource("1_q05g6")

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
